--- a/index.html
+++ b/index.html
@@ -22,40 +22,56 @@
       max-width: 1200px;
       margin: auto;
       display: grid;
-      grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+      grid-template-columns: repeat(3, 1fr);
       gap: 20px;
+    }
+
+    @media (max-width: 992px) {
+      .reviews {
+        grid-template-columns: repeat(2, 1fr);
+      }
+    }
+
+    @media (max-width: 600px) {
+      .reviews {
+        grid-template-columns: 1fr;
+      }
     }
 
     .card {
       background: white;
       padding: 20px;
-      border-radius: 10px;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.08);
-      text-align: center;
+      border-radius: 12px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.08);
+      display: flex;
+      gap: 15px;
+      align-items: flex-start;
     }
 
     .card img {
-      width: 90px;
-      height: 90px;
+      width: 80px;
+      height: 80px;
       border-radius: 50%;
       object-fit: cover;
-      margin-bottom: 10px;
     }
 
-    .name {
-      font-weight: bold;
-      font-size: 16px;
-    }
-
-    .branch {
-      color: gray;
-      font-size: 14px;
-      margin-bottom: 8px;
+    .card-content {
+      flex: 1;
     }
 
     .review {
       font-size: 14px;
-      margin-top: 8px;
+      line-height: 1.6;
+      background: #f0f6ff;
+      padding: 12px;
+      border-radius: 8px;
+      font-weight: 500;
+    }
+
+    .student-info {
+      margin-top: 10px;
+      font-size: 12px;
+      color: gray;
     }
 
     .pagination {
@@ -76,6 +92,11 @@
     .pagination button:hover {
       background: #357abd;
     }
+
+    .pagination button:disabled {
+      background: #ccc;
+      cursor: not-allowed;
+    }
   </style>
 </head>
 
@@ -86,103 +107,104 @@
   <div class="reviews" id="reviews"></div>
 
   <div class="pagination">
-  <button id="prevBtn" onclick="prevPage()">Previous</button>
-  <span id="pageInfo" style="margin: 0 15px;"></span>
-  <button id="nextBtn" onclick="nextPage()">Next</button>
-</div>
+    <button id="prevBtn" onclick="prevPage()">Previous</button>
+    <span id="pageInfo" style="margin: 0 15px;"></span>
+    <button id="nextBtn" onclick="nextPage()">Next</button>
+  </div>
 
+  <script>
+    const SUPABASE_URL = "https://dkjxuswyoyjitjdohepg.supabase.co";
+    const SUPABASE_ANON_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImRranh1c3d5b3lqaXRqZG9oZXBnIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NzA3NzM1MzQsImV4cCI6MjA4NjM0OTUzNH0.Qf-MVpBqWLGfIpewx7qKKV1YsgKEtKh1AQVdBLctLjE";
 
-<script>
-  const SUPABASE_URL = "https://dkjxuswyoyjitjdohepg.supabase.co";
-  const SUPABASE_ANON_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImRranh1c3d5b3lqaXRqZG9oZXBnIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NzA3NzM1MzQsImV4cCI6MjA4NjM0OTUzNH0.Qf-MVpBqWLGfIpewx7qKKV1YsgKEtKh1AQVdBLctLjE";
+    const supabaseClient = window.supabase.createClient(
+      SUPABASE_URL,
+      SUPABASE_ANON_KEY
+    );
 
-  const supabaseClient = window.supabase.createClient(
-    SUPABASE_URL,
-    SUPABASE_ANON_KEY
-  );
+    const reviewsPerPage = 9;
+    let currentPage = 1;
+    let totalPages = 1;
 
-  const reviewsPerPage = 9;
-  let currentPage = 1;
-  let totalPages = 1;
+    async function getTotalPages() {
+      const { count, error } = await supabaseClient
+        .from("bootcamp_reviews")
+        .select("*", { count: "exact", head: true });
 
-  async function getTotalPages() {
-    const { count, error } = await supabaseClient
-      .from("bootcamp_reviews")
-      .select("*", { count: "exact", head: true });
+      if (error) {
+        console.error(error);
+        return;
+      }
 
-    if (error) {
-      console.error(error);
-      return;
+      totalPages = Math.ceil(count / reviewsPerPage);
+      updatePageInfo();
     }
 
-    totalPages = Math.ceil(count / reviewsPerPage);
-    updatePageInfo();
-  }
+    async function loadReviews(page) {
+      const from = (page - 1) * reviewsPerPage;
+      const to = from + reviewsPerPage - 1;
 
-  async function loadReviews(page) {
-    const from = (page - 1) * reviewsPerPage;
-    const to = from + reviewsPerPage - 1;
+      const { data, error } = await supabaseClient
+        .from("bootcamp_reviews")
+        .select("*")
+        .range(from, to);
 
-    const { data, error } = await supabaseClient
-      .from("bootcamp_reviews")
-      .select("*")
-      .range(from, to);
+      if (error) {
+        console.error(error);
+        return;
+      }
 
-    if (error) {
-      console.error(error);
-      return;
+      const container = document.getElementById("reviews");
+      container.innerHTML = "";
+
+      data.forEach(review => {
+        const card = document.createElement("div");
+        card.className = "card";
+
+        const imageUrl =
+          `${SUPABASE_URL}/storage/v1/object/public/student-images/${review.image_path}`;
+
+        card.innerHTML = `
+          <img src="${imageUrl}" 
+               onerror="this.src='https://via.placeholder.com/80'" />
+          <div class="card-content">
+            <div class="review">${review.review_text || ""}</div>
+            <div class="student-info">
+              ${review.full_name || ""} • ${review.roll_number || ""}
+            </div>
+          </div>
+        `;
+
+        container.appendChild(card);
+      });
+
+      updatePageInfo();
     }
 
-    const container = document.getElementById("reviews");
-    container.innerHTML = "";
+    function updatePageInfo() {
+      document.getElementById("pageInfo").innerText =
+        `Page ${currentPage} of ${totalPages}`;
 
-    data.forEach(review => {
-      const card = document.createElement("div");
-      card.className = "card";
-
-      const imageUrl =
-        `${SUPABASE_URL}/storage/v1/object/public/student-images/${review.image_path}`;
-
-      card.innerHTML = `
-        <img src="${imageUrl}" 
-             onerror="this.src='https://via.placeholder.com/90'" />
-        <div class="name">${review.full_name || ""}</div>
-        <div class="branch">${review.branch || ""}</div>
-        <div class="review">${review.review_text || ""}</div>
-      `;
-
-      container.appendChild(card);
-    });
-
-    updatePageInfo();
-  }
-
-  function updatePageInfo() {
-    document.getElementById("pageInfo").innerText =
-      `Page ${currentPage} of ${totalPages}`;
-
-    document.getElementById("prevBtn").disabled = currentPage === 1;
-    document.getElementById("nextBtn").disabled = currentPage === totalPages;
-  }
-
-  function nextPage() {
-    if (currentPage < totalPages) {
-      currentPage++;
-      loadReviews(currentPage);
+      document.getElementById("prevBtn").disabled = currentPage === 1;
+      document.getElementById("nextBtn").disabled = currentPage === totalPages;
     }
-  }
 
-  function prevPage() {
-    if (currentPage > 1) {
-      currentPage--;
-      loadReviews(currentPage);
+    function nextPage() {
+      if (currentPage < totalPages) {
+        currentPage++;
+        loadReviews(currentPage);
+      }
     }
-  }
 
-  getTotalPages();
-  loadReviews(currentPage);
-</script>
+    function prevPage() {
+      if (currentPage > 1) {
+        currentPage--;
+        loadReviews(currentPage);
+      }
+    }
 
+    getTotalPages();
+    loadReviews(currentPage);
+  </script>
 
 </body>
 </html>
