--- a/index.html
+++ b/index.html
@@ -8,14 +8,27 @@
   <style>
     body {
       font-family: Arial, sans-serif;
-      background: #f4f6f9;
+      background: #0f172a;
       margin: 0;
       padding: 20px;
+      color: #e2e8f0;
+    }
+
+    .main-title {
+      text-align: center;
+      font-size: 32px;
+      font-weight: 700;
+      color: #3b82f6;
+      margin-bottom: 10px;
+      letter-spacing: 1px;
     }
 
     h1 {
       text-align: center;
       margin-bottom: 40px;
+      color: #ffffff;
+      font-weight: 500;
+      font-size: 20px;
     }
 
     .reviews {
@@ -23,7 +36,7 @@
       margin: auto;
       display: grid;
       grid-template-columns: repeat(3, 1fr);
-      gap: 20px;
+      gap: 25px;
     }
 
     @media (max-width: 992px) {
@@ -39,13 +52,19 @@
     }
 
     .card {
-      background: white;
+      background: #1e293b;
       padding: 20px;
-      border-radius: 12px;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.08);
+      border-radius: 14px;
+      box-shadow: 0 8px 25px rgba(0,0,0,0.4);
       display: flex;
       gap: 15px;
       align-items: flex-start;
+      transition: transform 0.2s ease, box-shadow 0.2s ease;
+    }
+
+    .card:hover {
+      transform: translateY(-4px);
+      box-shadow: 0 12px 30px rgba(0,0,0,0.6);
     }
 
     .card img {
@@ -53,6 +72,7 @@
       height: 80px;
       border-radius: 50%;
       object-fit: cover;
+      border: 2px solid #3b82f6;
     }
 
     .card-content {
@@ -62,16 +82,17 @@
     .review {
       font-size: 14px;
       line-height: 1.6;
-      background: #f0f6ff;
-      padding: 12px;
-      border-radius: 8px;
+      background: #0f172a;
+      padding: 14px;
+      border-radius: 10px;
       font-weight: 500;
+      color: #e2e8f0;
     }
 
     .student-info {
-      margin-top: 10px;
+      margin-top: 12px;
       font-size: 12px;
-      color: gray;
+      color: #94a3b8;
     }
 
     .pagination {
@@ -80,21 +101,23 @@
     }
 
     .pagination button {
-      padding: 8px 15px;
-      margin: 0 5px;
+      padding: 8px 18px;
+      margin: 0 8px;
       border: none;
-      background: #4a90e2;
+      background: #3b82f6;
       color: white;
-      border-radius: 5px;
+      border-radius: 8px;
       cursor: pointer;
+      font-weight: 500;
+      transition: background 0.2s ease;
     }
 
     .pagination button:hover {
-      background: #357abd;
+      background: #2563eb;
     }
 
     .pagination button:disabled {
-      background: #ccc;
+      background: #475569;
       cursor: not-allowed;
     }
   </style>
@@ -102,6 +125,7 @@
 
 <body>
 
+  <div class="main-title">AI-Bootcamp Reviews</div>
   <h1>AI Karyashala Bootcamp Reviews</h1>
 
   <div class="reviews" id="reviews"></div>
