--- a/index.html
+++ b/index.html
@@ -2,137 +2,178 @@
 <html>
 <head>
   <meta charset="UTF-8" />
-  <title>Bootcamp Reviews</title>
+  <title>AI Bootcamp Reviews</title>
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 
   <style>
-    body {
-      font-family: Arial, sans-serif;
-      background: #0f172a;
-      margin: 0;
-      padding: 20px;
-      color: #e2e8f0;
-    }
+  body {
+    font-family: "Segoe UI", Arial, sans-serif;
+    background: #0f172a;
+    margin: 0;
+    padding: 0;
+    color: #e2e8f0;
+  }
 
-    .main-title {
-      text-align: center;
-      font-size: 32px;
-      font-weight: 700;
-      color: #3b82f6;
-      margin-bottom: 10px;
-      letter-spacing: 1px;
-    }
+  /* HERO */
+  .hero {
+    background: linear-gradient(90deg, #1e293b, #0f172a);
+    color: white;
+    padding: 60px 20px;
+    text-align: center;
+    border-bottom: 1px solid #1e293b;
+  }
 
-    h1 {
-      text-align: center;
-      margin-bottom: 40px;
-      color: #ffffff;
-      font-weight: 500;
-      font-size: 20px;
-    }
+  .hero h1 {
+    font-size: 36px;
+    margin: 0;
+    font-weight: 700;
+  }
 
+  .hero p {
+    margin-top: 10px;
+    font-size: 16px;
+    opacity: 0.8;
+  }
+
+  /* STATS */
+  .stats {
+    max-width: 1100px;
+    margin: -30px auto 40px auto;
+    display: flex;
+    justify-content: center;
+    gap: 40px;
+  }
+
+  .stat-box {
+    background: #1e293b;
+    padding: 20px 40px;
+    border-radius: 12px;
+    box-shadow: 0 8px 20px rgba(0,0,0,0.4);
+    text-align: center;
+  }
+
+  .stat-number {
+    font-size: 24px;
+    font-weight: 700;
+    color: #3b82f6;
+  }
+
+  .stat-label {
+    font-size: 13px;
+    color: #94a3b8;
+    margin-top: 5px;
+  }
+
+  /* REVIEW GRID */
+  .reviews {
+    max-width: 1200px;
+    margin: auto;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 25px;
+    padding: 20px;
+  }
+
+  @media (max-width: 992px) {
     .reviews {
-      max-width: 1200px;
-      margin: auto;
-      display: grid;
-      grid-template-columns: repeat(3, 1fr);
-      gap: 25px;
+      grid-template-columns: repeat(2, 1fr);
     }
+  }
 
-    @media (max-width: 992px) {
-      .reviews {
-        grid-template-columns: repeat(2, 1fr);
-      }
+  @media (max-width: 600px) {
+    .reviews {
+      grid-template-columns: 1fr;
     }
+  }
 
-    @media (max-width: 600px) {
-      .reviews {
-        grid-template-columns: 1fr;
-      }
-    }
+  .card {
+    background: #1e293b;
+    padding: 20px;
+    border-radius: 14px;
+    box-shadow: 0 8px 25px rgba(0,0,0,0.5);
+    display: flex;
+    gap: 15px;
+    align-items: flex-start;
+    transition: transform 0.2s ease, box-shadow 0.2s ease;
+  }
 
-    .card {
-      background: #1e293b;
-      padding: 20px;
-      border-radius: 14px;
-      box-shadow: 0 8px 25px rgba(0,0,0,0.4);
-      display: flex;
-      gap: 15px;
-      align-items: flex-start;
-      transition: transform 0.2s ease, box-shadow 0.2s ease;
-    }
+  .card:hover {
+    transform: translateY(-4px);
+    box-shadow: 0 12px 35px rgba(0,0,0,0.6);
+  }
 
-    .card:hover {
-      transform: translateY(-4px);
-      box-shadow: 0 12px 30px rgba(0,0,0,0.6);
-    }
+  .card img {
+    width: 70px;
+    height: 70px;
+    border-radius: 50%;
+    object-fit: cover;
+    border: 2px solid #3b82f6;
+  }
 
-    .card img {
-      width: 80px;
-      height: 80px;
-      border-radius: 50%;
-      object-fit: cover;
-      border: 2px solid #3b82f6;
-    }
+  .review {
+    font-size: 14px;
+    line-height: 1.6;
+    background: #0f172a;
+    padding: 12px;
+    border-radius: 10px;
+    font-weight: 500;
+    color: #e2e8f0;
+  }
 
-    .card-content {
-      flex: 1;
-    }
+  .student-info {
+    margin-top: 10px;
+    font-size: 12px;
+    color: #94a3b8;
+  }
 
-    .review {
-      font-size: 14px;
-      line-height: 1.6;
-      background: #0f172a;
-      padding: 14px;
-      border-radius: 10px;
-      font-weight: 500;
-      color: #e2e8f0;
-    }
+  /* PAGINATION */
+  .pagination {
+    text-align: center;
+    margin: 40px 0;
+  }
 
-    .student-info {
-      margin-top: 12px;
-      font-size: 12px;
-      color: #94a3b8;
-    }
+  .pagination button {
+    padding: 8px 18px;
+    margin: 0 8px;
+    border: none;
+    background: #3b82f6;
+    color: white;
+    border-radius: 8px;
+    cursor: pointer;
+    transition: background 0.2s ease;
+  }
 
-    .pagination {
-      text-align: center;
-      margin-top: 40px;
-    }
+  .pagination button:hover {
+    background: #2563eb;
+  }
 
-    .pagination button {
-      padding: 8px 18px;
-      margin: 0 8px;
-      border: none;
-      background: #3b82f6;
-      color: white;
-      border-radius: 8px;
-      cursor: pointer;
-      font-weight: 500;
-      transition: background 0.2s ease;
-    }
+  .pagination button:disabled {
+    background: #475569;
+    cursor: not-allowed;
+  }
+</style>
 
-    .pagination button:hover {
-      background: #2563eb;
-    }
-
-    .pagination button:disabled {
-      background: #475569;
-      cursor: not-allowed;
-    }
-  </style>
 </head>
 
 <body>
 
-  <div class="main-title">AI-Bootcamp Reviews</div>
-  <h1>AI Karyashala Bootcamp Reviews</h1>
+  <div class="hero">
+    <h1>AI Bootcamp Reviews</h1>
+    <p>Insights and feedback from our engineering students</p>
+  </div>
+
+  <div class="stats">
+    <div class="stat-box">
+      <div class="stat-number" id="totalReviews">0</div>
+      <div class="stat-label">Total Reviews</div>
+    </div>
+  </div>
 
   <div class="reviews" id="reviews"></div>
 
   <div class="pagination">
     <button id="prevBtn" onclick="prevPage()">Previous</button>
-    <span id="pageInfo" style="margin: 0 15px;"></span>
+    <span id="pageInfo"></span>
     <button id="nextBtn" onclick="nextPage()">Next</button>
   </div>
 
@@ -150,14 +191,11 @@
     let totalPages = 1;
 
     async function getTotalPages() {
-      const { count, error } = await supabaseClient
+      const { count } = await supabaseClient
         .from("bootcamp_reviews")
         .select("*", { count: "exact", head: true });
 
-      if (error) {
-        console.error(error);
-        return;
-      }
+      document.getElementById("totalReviews").innerText = count;
 
       totalPages = Math.ceil(count / reviewsPerPage);
       updatePageInfo();
@@ -167,15 +205,10 @@
       const from = (page - 1) * reviewsPerPage;
       const to = from + reviewsPerPage - 1;
 
-      const { data, error } = await supabaseClient
+      const { data } = await supabaseClient
         .from("bootcamp_reviews")
         .select("*")
         .range(from, to);
-
-      if (error) {
-        console.error(error);
-        return;
-      }
 
       const container = document.getElementById("reviews");
       container.innerHTML = "";
@@ -188,12 +221,11 @@
           `${SUPABASE_URL}/storage/v1/object/public/student-images/${review.image_path}`;
 
         card.innerHTML = `
-          <img src="${imageUrl}" 
-               onerror="this.src='https://via.placeholder.com/80'" />
-          <div class="card-content">
-            <div class="review">${review.review_text || ""}</div>
+          <img src="${imageUrl}" onerror="this.src='https://via.placeholder.com/70'" />
+          <div>
+            <div class="review">${review.review_text}</div>
             <div class="student-info">
-              ${review.full_name || ""} • ${review.roll_number || ""}
+              ${review.full_name} • ${review.roll_number}
             </div>
           </div>
         `;
@@ -206,7 +238,7 @@
 
     function updatePageInfo() {
       document.getElementById("pageInfo").innerText =
-        `Page ${currentPage} of ${totalPages}`;
+        ` Page ${currentPage} of ${totalPages} `;
 
       document.getElementById("prevBtn").disabled = currentPage === 1;
       document.getElementById("nextBtn").disabled = currentPage === totalPages;
