--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     header {
       text-align: center;
-      padding: 60px 20px 30px;
+      padding: 60px 20px 20px;
     }
 
     header h2 {
@@ -27,7 +27,7 @@
     }
 
     header h1 {
-      font-size: 40px;
+      font-size: 38px;
       margin: 10px 0;
     }
 
@@ -35,9 +35,39 @@
       color: #94a3b8;
       max-width: 600px;
       margin: auto;
-      font-size: 16px;
+      font-size: 15px;
     }
 
+    /* ===== STATS ===== */
+    .stats {
+      display: flex;
+      justify-content: center;
+      gap: 60px;
+      margin: 30px 0 20px;
+      flex-wrap: wrap;
+    }
+
+    .stat-box {
+      background: #1e293b;
+      padding: 20px 40px;
+      border-radius: 12px;
+      text-align: center;
+      box-shadow: 0 6px 20px rgba(0,0,0,0.4);
+    }
+
+    .stat-number {
+      font-size: 28px;
+      font-weight: 700;
+      color: #3b82f6;
+    }
+
+    .stat-label {
+      font-size: 14px;
+      color: #94a3b8;
+      margin-top: 5px;
+    }
+
+    /* ===== GRID ===== */
     .reviews {
       max-width: 1400px;
       margin: 40px auto;
@@ -59,6 +89,7 @@
       }
     }
 
+    /* ===== CARD ===== */
     .card {
       background: #1e293b;
       padding: 25px;
@@ -68,7 +99,7 @@
       align-items: flex-start;
       box-shadow: 0 8px 25px rgba(0,0,0,0.4);
       transition: transform 0.3s ease;
-      height: 240px;
+      height: 250px;
     }
 
     .card:hover {
@@ -92,7 +123,7 @@
 
     .review {
       position: relative;
-      font-size: 15px;
+      font-size: 14px;
       line-height: 1.6;
       background: #0f172a;
       padding: 20px;
@@ -124,6 +155,7 @@
       color: #94a3b8;
     }
 
+    /* ===== PAGINATION ===== */
     .pagination {
       text-align: center;
       margin: 40px 0 60px;
@@ -161,10 +193,24 @@
 
 <header>
   <h2>AI Bootcamp Reviews</h2>
-  <h1>What Participants Say</h1>
-  <p>"Empowering students with AI skills for the future."</p>
+  <h1>What Our Participants Are Saying</h1>
+  <p>Empowering students with practical AI skills for the future.</p>
 </header>
 
+<!-- ===== STATS SECTION ===== -->
+<div class="stats">
+  <div class="stat-box">
+    <div class="stat-number" id="avgRating">0.0</div>
+    <div class="stat-label">Overall Rating</div>
+  </div>
+
+  <div class="stat-box">
+    <div class="stat-number" id="totalReviews">0</div>
+    <div class="stat-label">Total Reviews</div>
+  </div>
+</div>
+
+<!-- ===== REVIEWS ===== -->
 <div class="reviews" id="reviews"></div>
 
 <div class="pagination">
@@ -186,10 +232,20 @@
   let currentPage = 1;
   let totalPages = 1;
 
-  async function getTotalPages() {
-    const { count } = await supabaseClient
+  async function getStats() {
+    const { data, count } = await supabaseClient
       .from("bootcamp_reviews")
-      .select("*", { count: "exact", head: true });
+      .select("rating", { count: "exact" });
+
+    document.getElementById("totalReviews").innerText = count;
+
+    let totalRating = 0;
+    data.forEach(item => {
+      totalRating += item.rating || 0;
+    });
+
+    const avg = (totalRating / count).toFixed(1);
+    document.getElementById("avgRating").innerText = avg + " / 5";
 
     totalPages = Math.ceil(count / reviewsPerPage);
     updatePageInfo();
@@ -262,7 +318,7 @@
     }
   }
 
-  getTotalPages();
+  getStats();
   loadReviews(currentPage);
 </script>
 
