changed rating start colour

--- a/index.html
+++ b/index.html
@@ -143,11 +143,12 @@
     }
 
     .rating {
-      margin-top: 10px;
-      font-size: 18px;
-      letter-spacing: 3px;
-      color: #3b82f6;
-    }
+  margin-top: 10px;
+  font-size: 18px;
+  letter-spacing: 3px;
+  color: #fbbf24;   /* Yellow star color */
+}
+
 
     .student-info {
       margin-top: 8px;
